--- a/점진적 학습법과 준 지도 학습법을 활용한 센서 기반 인간 행동 인식 프레임워크/readme
+++ b/점진적 학습법과 준 지도 학습법을 활용한 센서 기반 인간 행동 인식 프레임워크/readme
@@ -1,5 +1,9 @@
 abstract:
-Sensor-based human activity recognition using machine learning methods has been used in various healthcare services recently, and their significance is increasing. However, previous methods have limitations with leakage of personal information, increased computation time caused by data growth, and difficulty in data labeling. In this study, we propose a human activity recognition framework that combines incremental learning and semi-supervised learning methods to overcome these limitations. Our proposed method can be trained more quickly without performance loss than conventional batch learning methods in sensor-based human activity recognition.
+Sensor-based human activity recognition using machine learning methods has been used in various healthcare services 
+recently, and their significance is increasing. However, previous methods have limitations with leakage of personal information, 
+increased computation time caused by data growth, and difficulty in data labeling. In this study, we propose a human activity recognition framework 
+that combines incremental learning and semi-supervised learning methods to overcome these limitations. Our proposed method can be trained more quickly 
+without performance loss than conventional batch learning methods in sensor-based human activity recognition.
 
 
 논문 dbpia 사이트
